components/chromadb/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chromadb
  labels:
    app: chromadb
    app.kubernetes.io/component: chromadb
    app.kubernetes.io/instance: chromadb
    app.kubernetes.io/name: chromadb
    app.kubernetes.io/part-of: sasya-arogya
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: chromadb
  sessionAffinity: None
  type: ClusterIP
